argocd/infra/server/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ing-d-devops-argocd
  namespace: argocd
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "ing-d-devops-argocd"
    networking.gke.io/managed-certificates: crt-d-devops-argocd
    spec.ingressClassName: "gce"
spec:
  defaultBackend:
    service:
      name: argocd-server
      port:
        number: 80
